# TypedTests

./: .gitignore  CMakeLists.txt  README.md  azure-pipelines.yml  conanfile.txt
gtest/: CMakeLists.txt  book_interface_tests.cc  book_test_variables.hpp  book_test_variables.hpp.in
gtest/examples/: example.json  example.xml
src/: CMakeLists.txt  main.cpp
src/book_reader/: book_reader.hpp  book_reader_factory.hpp  json_reader.hpp  xml_reader.hpp
